# GLSimplify-Library

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/shaders/: basic.frag  basic.vert
examples/triangle/: main.cpp
include/gls/: ContextSettings.h  Debug.h  KeyTypes.h  Mesh.h  Render.h  Shader.h  VertexLayout.h  Window.h
src/: Debug.cpp  Mesh.cpp  Render.cpp  Shader.cpp  VertexLayout.cpp  Window.cpp
src/backends/sfml/: ContextFlags.h
